--- a/generic.html
+++ b/generic.html
@@ -71,7 +71,7 @@
       <script>
 
       var options = {
-        data: [{"text": "iphone 3", "website-link": "/loading.html"},
+        data: [{"text": "iphone 3", "website-link": "loading.html"},
                {"text": "iphone 9", "website-link": "loading.html"},
                {"text": "iphone y", "website-link": "loading.html"},
                {"text": "iphone g", "website-link": "loading.html"},
