Added rating system to tip page

--- a/tip.html
+++ b/tip.html
@@ -1,69 +1,102 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+Phantom by HTML5 UP
+html5up.net | @ajlkn
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+  <title>Generic - Phantom by HTML5 UP</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+</head>
+<body>
+  <!-- Wrapper -->
+  <div id="wrapper">
 
-							<!-- Logo -->
-								<a href="chat.html" class="logo">
-									<span class="symbol"></span><span class="title">< back</span>
-								</a>
-						</div>
-					</header>
+    <!-- Header -->
+    <header id="header">
+      <div class="inner">
+
+        <!-- Logo -->
+        <a href="chat.html" class="logo">
+          <span class="symbol"></span><span class="title">< back</span>
+        </a>
+      </div
+    </header>
 
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>Tip Page</h1>
-              <div>
-                <p>Rate your Tipster:⭐️⭐️⭐️⭐️⭐️ <p>
-                <p>Give us your Credit Card info:_________ <p>
-                <div>
-                  <a href="index.html"><button class="ourButton">Send Tip
-                  </button></a>
-                </div>
-              </div>
-						</div>
-					</div>
+    <!-- Main -->
+    <div id="main">
+      <div class="inner">
+        <h1>Tip Page</h1>
+        <div class='tipster_rating'>
+          <p>Rate your Tipster!</p>
+        </div>
+ 
+        <section class='rating-widget'>
 
-				<!-- Footer -->
+          <!-- Rating Stars Box -->
+          <div class='rating-stars text-center'>
+            <ul id='stars'>
+              <li class='star' title='Poor' data-value='1'>
+                <i class='fa fa-star fa-fw'></i>
+              </li>
+              <li class='star' title='Fair' data-value='2'>
+                <i class='fa fa-star fa-fw'></i>
+              </li>
+              <li class='star' title='Good' data-value='3'>
+                <i class='fa fa-star fa-fw'></i>
+              </li>
+              <li class='star' title='Excellent' data-value='4'>
+                <i class='fa fa-star fa-fw'></i>
+              </li>
+              <li class='star' title='WOW!!!' data-value='5'>
+                <i class='fa fa-star fa-fw'></i>
+              </li>
+            </ul>
+          </div>
 
-			</div>
+        </section> 
+ 
+          <div class ='credit_card'>
+          <p> If you appreciate how helpful your tipster was, you can tip them!</p>
+          </div>
+            <div>
+              <a href="index.html"><button class="ourButton">Send Tip
+              </button></a>
+                <a href="index.html"><button class="ourButton">No Thank You
+                </button></a>
+            </div>
+          </div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+          <!-- Footer -->
+
+        </div>
+      </div>
+
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
 
       <!-- JS file -->
-      <script src="assets/js/jquery.easy-autocomplete.min.js"></script> 
+      <script src="assets/js/jquery.easy-autocomplete.min.js"></script>
 
       <!-- CSS file -->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css">
 
       <!-- Additional CSS Themes file - not required-->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css">
 
-	</body>
-</html>
+      <!-- Rating JS File -->
+
+    </body>
+    </html>
