Added email/phone fields to loading page

--- a/loading.html
+++ b/loading.html
@@ -30,27 +30,38 @@
 					</header>
 
 
-				<!-- Main -->
+					<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<h1>Hold on!</h1>
-              <div>
-                <p id="loadingTime"></p>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <div>
-                  <p class="aboveButton">Wanna pretend you're connected?</p>
-                  <a href="chat.html"><button class="ourButton">Start Typing
-                  </button></a>
-                </div>
-              </div>
+			                <div>
+			                	<h2 id="loadingTime"></h2>
+
+
+				                <p id="notificationAlert">Want a phone or email notification once you're connected?
+				                						  Leave your info below!</p>
+				                <form>
+					                <div class="form-group">
+					                	<label for="emailInput">Email address:</label>
+					                	<input type="email" class="form-control" id="emailInput">
+					               	</div>
+							        <div class="form-group">
+							            <label for="phoneInput">Phone number:</label>
+							            <input type="tel" class="form-control" id="phoneInput">
+							        </div>
+							        <div>
+					               		<button type="submit" class="btn btn-default" id="submitButton">Submit</button>
+					               	</div>
+					            </form>
+				                <div>
+				                  <p class="aboveButton">Wanna pretend you're connected?</p>
+				                  <a href="chat.html"><button class="ourButton">Start Typing
+				                  </button></a>
+				                </div>
+			             	</div>
 						</div>
 					</div>
+
 
 				<!-- Footer -->
 
