deleted unnecessary code

--- a/rate.html
+++ b/rate.html
@@ -1,18 +1,11 @@
 <!DOCTYPE HTML>
-<!--
-Phantom by HTML5 UP
-html5up.net | @ajlkn
-Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
-  <title>Generic - Phantom by HTML5 UP</title>
+  <title>Tip4Tip</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="stylesheet" href="assets/css/main.css" />
-  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
 </head>
 <body>
@@ -34,9 +27,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <!-- Main -->
     <div id="main">
       <div class="inner">
-        <h1>Tip Page</h1>
+        <h1>Rate your Tipster</h1>
         <div class='tipster_rating'>
-          <p>Rate your Tipster!</p>
+          <p>Press on the number of stars you believe your Tipster deserves</p>
         </div>
  
         <section class='rating-widget'>
@@ -68,7 +61,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           <p> If you appreciate how helpful your tipster was, you can tip them!</p>
           </div>
             <div>
-              <a href="index.html"><button class="ourButton">Send Tip
+              <a href="index.html"><button class="ourButton">Send a Tip
               </button></a>
                 <a href="index.html"><button class="ourButton">No Thank You
                 </button></a>
