--- a/chat.html
+++ b/chat.html
@@ -6,14 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Tip4Tip</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="chat.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -30,10 +27,10 @@
 
         <div class="menu2">
           <button class="button1">Attach a File</button>
-          <a href="tip.html"><button class="button2">Problem Solved</button></a>
+          <a href="rate.html"><button class="button2">Problem Solved</button></a>
         </div>
 
-        
+
     <br>
     <br>
     <ol class="chat">
@@ -111,13 +108,13 @@
 			<script src="assets/js/main.js"></script>
 
       <!-- JS file -->
-      <script src="assets/js/jquery.easy-autocomplete.min.js"></script> 
+      <script src="assets/js/jquery.easy-autocomplete.min.js"></script>
 
       <!-- CSS file -->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css">
 
       <!-- Additional CSS Themes file - not required-->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css">
       <script>
 
       var options = {
