--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Tip4Tip</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -61,13 +61,13 @@
 			<script src="assets/js/main.js"></script>
 
       <!-- JS file -->
-      <script src="assets/js/jquery.easy-autocomplete.min.js"></script> 
+      <script src="assets/js/jquery.easy-autocomplete.min.js"></script>
 
       <!-- CSS file -->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css">
 
       <!-- Additional CSS Themes file - not required-->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css">
       <script>
 
       var options = {
