--- a/loading.html
+++ b/loading.html
@@ -1,18 +1,10 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>Tip4Tip</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -75,13 +67,13 @@
 			<script src="assets/js/main.js"></script>
 
       <!-- JS file -->
-      <script src="assets/js/jquery.easy-autocomplete.min.js"></script> 
+      <script src="assets/js/jquery.easy-autocomplete.min.js"></script>
 
       <!-- CSS file -->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.min.css">
 
       <!-- Additional CSS Themes file - not required-->
-      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css"> 
+      <link rel="stylesheet" href="assets/js/easy-autocomplete.themes.min.css">
       <script>
         var n = 60;
         $('#loadingTime').text("It's only gonna be " + n + " minutes.");
