Added a payment page

--- a/rate.html
+++ b/rate.html
@@ -61,7 +61,7 @@
           <p> If you appreciate how helpful your tipster was, you can tip them!</p>
           </div>
             <div>
-              <a href="index.html"><button class="ourButton">Send a Tip
+              <a href="rate.html"><button class="ourButton">Send a Tip
               </button></a>
                 <a href="index.html"><button class="ourButton">No Thank You
                 </button></a>
