changed input types

--- a/payment.html
+++ b/payment.html
@@ -41,18 +41,18 @@
                                             </div>
                                             <div class="form-group" id="card-number-field">
                                                 <label for="cardNumber">Card Number</label>
-                                                <input type="text" class="form-control" id="cardNumber">
+                                                <input type="number" class="form-control" id="cardNumber">
                                             </div>
                                             <div class="form-group CVV">
                                                 <label for="cvv">CVV</label>
-                                                <input type="text" class="form-control" id="cvv">
+                                                <input type="number" class="form-control" id="cvv">
                                             </div>
                                             <div class="form-group" id="expiration-date">
                                                 <label>Expiration Date</label>
                                                 <input type="text" class="form-control" id="expirationDate">
                                             </div>
                                             <div>
-                                                <a href="index.html"><button class="ourButton">Confirm</button></a>
+                                                <a href="index.html"><button type="submit" class="ourButton">Confirm</button></a>
                                             </div>
                                         </form>
                                     </div>
