--- a/loading.html
+++ b/loading.html
@@ -4,7 +4,6 @@
 		<title>Tip4Tip</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -42,8 +41,27 @@
 							            <input type="tel" class="form-control" id="phoneInput">
 							        </div>
 							        <div>
-					               		<button type="submit" class="btn btn-default" id="submitButton">Submit</button>
+					               		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" 
+					               		data-target="#myModal" id="submitButton">Submit</button>
+
+					               		<div id="myModal" class="modal fade" role="dialog">
+					               			<div class="modal-dialog">
+												<div class="modal-content">
+												    <div class="modal-header">
+												         <h4 class="modal-title">Alert Set!</h4>
+												    </div>
+												    <div class="modal-body">
+												        <p>Thanks for submitting your phone/email! 
+												        We'll notify you once you're connected with a tipster, so grab a cup of coffee while you wait!</p>
+												    </div>
+												        <div class="modal-footer">
+												        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+												    </div>
+												</div>
+											</div>
+										</div>
 					               	</div>
+
 					            </form>
 				                <div>
 				                  <p class="aboveButton">Wanna pretend you're connected?</p>
@@ -60,10 +78,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+			<link rel="stylesheet" href="assets/css/main.css" />
+  			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
       <!-- JS file -->
