--- a/payment.html
+++ b/payment.html
@@ -6,8 +6,15 @@
     <title>Credit Card</title>
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/credit.css">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </head>
 
 <body>
@@ -52,8 +59,26 @@
                                                 <input type="text" class="form-control" id="expirationDate">
                                             </div>
                                             <div>
-                                                <a href="index.html"><button type="submit" class="ourButton">Confirm</button></a>
+                                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" 
+                                                data-target="#payModal" class="ourButton">Confirm</button>
+
+                                                <div id="payModal" class="modal fade" role="dialog">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                 <h4 class="modal-title">THANK YOU!</h4>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <p>Thanks for supporting your tipster!</p>
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <a href="index.html"><button type="button" class="btn btn-default" data-dismiss="modal">Go Home</button></a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
+
                                         </form>
                                     </div>
                                 </div>
@@ -65,9 +90,5 @@
 
             </div>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="assets/js/jquery.payform.min.js" charset="utf-8"></script>
-    <script src="assets/js/script.js"></script>
 </body>
 </html>
