--- a/payment.html
+++ b/payment.html
@@ -72,7 +72,7 @@
                                                                 <p>Thanks for supporting your tipster!</p>
                                                             </div>
                                                             <div class="modal-footer">
-                                                                <a href="index.html"><button type="button" class="btn btn-default" data-dismiss="modal">Go Home</button></a>
+                                                                <a href="index.html"><button type="button" class="btn btn-default">Go Home</button></a>
                                                             </div>
                                                         </div>
                                                     </div>
