prepopulated form fields

--- a/payment.html
+++ b/payment.html
@@ -60,20 +60,20 @@
                                         <h2>Credit Card Information:</h2>
                                         <form>
                                             <div class="form-group owner">
-                                                <label for="owner">Owner</label>
-                                                <input type="text" class="form-control" id="owner">
+                                                <label for="owner">Card Holder's Name</label>
+                                                <input type="text" class="form-control" id="owner" placeholder="Name on Card">
                                             </div>
                                             <div class="form-group" id="card-number-field">
                                                 <label for="cardNumber">Card Number</label>
-                                                <input type="number" class="form-control" id="cardNumber">
+                                                <input type="text" maxlength="12" class="form-control" id="cardNumber" placeholder = "12 Digit Number">
                                             </div>
                                             <div class="form-group CVV">
                                                 <label for="cvv">CVV</label>
-                                                <input type="number" class="form-control" id="cvv">
+                                                <input type="text" maxlength="3" class="form-control" id="cvv" placeholder="3 Digit Security Code on Back">
                                             </div>
                                             <div class="form-group" id="expiration-date">
                                                 <label>Expiration Date</label>
-                                                <input type="text" class="form-control" id="expirationDate">
+                                                <input type="text" class="form-control" id="expirationDate" placeholder="Month/Year, e.g., 03/2017">
                                             </div>
                                             <div>
                                                 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" 
@@ -94,13 +94,13 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
 
+                                            </div>
                                         </form>
                                     </div>
                                 </div>
+                            </div>
                         </div>
-                    </div>
 
 
                 <!-- Footer -->
