--- a/loading.html
+++ b/loading.html
@@ -38,7 +38,7 @@
 					               	</div>
 							        <div class="form-group">
 							            <label for="phoneInput">Phone number:</label>
-							            <input type="tel" class="form-control" id="phoneInput">
+							            <input type="tel" class="form-control" id="phoneInput" placeholder="123-456-7890">
 							        </div>
 							        <div>
 					               		<button type="button" class="btn btn-info btn-lg" data-toggle="modal" 
