--- a/payment.html
+++ b/payment.html
@@ -22,7 +22,7 @@
                         <div class="inner">
 
                             <!-- Logo -->
-                                <a href="index.html" class="logo">
+                                <a href="rate.html" class="logo">
                                     <span class="symbol"></span><span class="title">< back</span>
                                 </a>
                         </div>
