--- a/chat.html
+++ b/chat.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Tip4Tip</title>
-	<!--<link rel="stylesheet" href="assets/css/main.css" />-->
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
 	<!-- Wrapper -->
