--- a/loading.html
+++ b/loading.html
@@ -24,7 +24,7 @@
 					<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Hold on!</h1>
+							<h1>Hold on, sit tight!</h1>
 			                <div>
 			                	<h2 id="loadingTime"></h2>
 
@@ -84,7 +84,7 @@
   			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
       <script>
-        var n = 60;
+        var n = 3;
         $('#loadingTime').text("It's only gonna be " + n + " minutes.");
       </script>
 
