--- a/chat.html
+++ b/chat.html
@@ -19,8 +19,8 @@
 				<div class="chat-title">
 					<h1>Alex</h1>
 					<h2>iOS Expert</h2>
-					<figure class="avatar">
-						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure>
+					<!--figure class="avatar">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure> -->
 					</div>
 					<div class="messages">
 						<div class="messages-content"></div>
