Button for adding files added

--- a/chat.html
+++ b/chat.html
@@ -12,6 +12,9 @@
 		<div id="main">
 			<div class="menu2">
 				<button class="button1">Attach a File</button>
+				<form class="attach_form" action="/action_page.php">
+					<input class="attatch_file" type="file" name="pic" accept="image/*">
+				</form>
 				<a href="rate.html"><button class="button2">Problem Solved</button></a>
 			</div>
 
