--- a/payment.html
+++ b/payment.html
@@ -49,7 +49,7 @@
                                             <label for="c2">Choose your own amount:</label>
                                             <div class="input-group"> 
                                                 <span class="input-group-addon">$</span>
-                                                <input type="number" value="0" min="0" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" class="form-control currency" id="c2" />
+                                                <input type="number" value="0" min="0" max="100" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" class="form-control currency" id="c2" />
                                             </div>
                                         </div>
                                     </form>
