wowee those buttons amirite

--- a/chat.html
+++ b/chat.html
@@ -11,17 +11,29 @@
 		<!-- Main -->
 		<div id="main">
 			<div class="menu2">
-				<button class="button1">Attach a File</button>
+				<!---<button class="button1">
 				<form class="attach_form" action="/action_page.php">
-					<input class="attatch_file" type="file" name="pic" accept="image/*">
+					<h1 class="attach_text">Attach a file</h1>
+					<input class="attach_file" type="file" name="pic" accept="image/*">
 				</form>
-				<a href="rate.html"><button class="button2">Problem Solved</button></a>
+				</button>-->
 			</div>
 
 			<div class="chat">
 				<div class="chat-title">
-					<h1>Alex</h1>
-					<h2>iOS Expert</h2>
+					<div class="row">
+						<h1>Alex</h1>
+						<a href="rate.html" class="button2 right">Problem Solved</a>
+					</div>
+					<div class="row">
+						<h2 style="margin: 0;">iOS Expert</h2>
+						<div class="file-upload right">
+							<form class="attach_form" action="/action_page.php">
+								<h1 class="attach_text">Attach a file</h1>
+								<input class="attach_file" type="file" name="pic" accept="image/*">
+							</form>
+						</div>
+					</div>
 					<!--figure class="avatar">
 						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure> -->
 					</div>
