--- a/chat.html
+++ b/chat.html
@@ -57,6 +57,7 @@
 			if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.0/jquery.fancybox.min.js"></script>
 			<script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 			<script src="assets/js/chat.js"></script>
 			<!-- JS file
@@ -64,6 +65,7 @@
 
 			<link rel="stylesheet" href="assets/js/easy-autocomplete.min.css">
 			CSS file -->
+			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.0/jquery.fancybox.min.css">
 			<link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css">
 			<link rel="stylesheet" href="assets/css/chat.css" />
 
