--- a/loading.html
+++ b/loading.html
@@ -14,7 +14,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="generic.html" class="logo">
 									<span class="symbol"></span><span class="title">< back</span>
 								</a>
 						</div>
