fixed attach a file button

--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,8 @@
 						<div class="file-upload right">
 							<form class="attach_form" action="/action_page.php">
 								<h1 class="attach_text">Attach a file</h1>
-								<input class="attach_file" type="file" name="pic" accept="image/*">
+								<input class="attach_file" type="file" name="pic"
+                accept="image/*" style="width: 100%;">
 							</form>
 						</div>
 					</div>
