Changed homepage buttons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Downloads</h2>
+										<h2>Computers</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -68,7 +68,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Computers</h2>
+										<h2>Printers</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -79,7 +79,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Updates</h2>
+										<h2>TVs</h2>
 										<div class="content">
 											<p></p>
 										</div>
