--- a/chat.html
+++ b/chat.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110188063-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-110188063-1');
+	</script>
+
+	
 	<title>Tip4Tip</title>
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
