--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="generic.html" class="phoneImage">
 										<h2>Phones</h2>
 										<div class="content">
 											<p></p>
@@ -67,7 +67,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="generic.html" class="computerImage">
 										<h2>Computers</h2>
 										<div class="content">
 											<p></p>
@@ -78,7 +78,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="generic.html" class="printerImage">
 										<h2>Printers</h2>
 										<div class="content">
 											<p></p>
@@ -89,7 +89,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="generic.html" class="tvImage">
 										<h2>TVs</h2>
 										<div class="content">
 											<p></p>
@@ -129,6 +129,35 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
   			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  	<script> 
+			$(".tvImage").click(function() {
+				console.log("image click");
+				tracker = ga.getAll()[0];
+				tracker.send('event', 'tvImage', 'click');
+			});
+			</script>
+			<script> 
+			$(".computerImage").click(function() {
+				console.log("image click");
+				tracker = ga.getAll()[0];
+				tracker.send('event', 'computerImage', 'click');
+			});
+			</script>
+			<script> 
+			$(".phoneImage").click(function() {
+				console.log("image click");
+				tracker = ga.getAll()[0];
+				tracker.send('event', 'phoneImage', 'click');
+			});
+			</script>
+			<script> 
+			$(".printerImage").click(function() {
+				console.log("image click");
+				tracker = ga.getAll()[0];
+				tracker.send('event', 'printerImage', 'click');
+			});
+			</script>
 
 
 	</body>
